--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<section id="three">
 	<div class="row">
 		<div class="col-8 col-12-small">
-			<form method="post" action="https://cadebeno33.page.gd/send-email.php">
+			<form method="post" action="send-email.php">
 				<div class="row gtr-uniform gtr-50">
 					<div class="col-6 col-12-xsmall">
 						<input type="text" name="name" id="name" placeholder="Name" required />
@@ -489,3 +489,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
