--- a/index.html
+++ b/index.html
@@ -100,26 +100,28 @@
 						<h2>Get In Touch</h2>
 						<p>If you are interested in my projects or job oppurtunites please reach out to me.</p>
 						<section id="three">
-	<div class="row">
-    <div class="col-8 col-12-small">
-        <form method="post" action="https://cadebeno33.atwebpages.com/send-email.php">
-            <div class="row gtr-uniform gtr-50">
-                <div class="col-6 col-12-xsmall">
-                    <input type="text" name="name" id="name" placeholder="Your Name" required />
-                </div>
-                <div class="col-6 col-12-xsmall">
-                    <input type="email" name="email" id="email" placeholder="Your Email" required />
-                </div>
-                <div class="col-12">
-                    <textarea name="message" id="message" placeholder="Your Message" rows="4" required></textarea>
-                </div>
-                <div class="col-12">
-                    <input type="submit" value="Send Message" />
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+	 <div class="row">
+		<div class="col-8 col-12-small">
+			<form method="post" action="https://cadebeno33.page.gd/send-email.php">
+				<div class="row gtr-uniform gtr-50">
+					<div class="col-6 col-12-xsmall">
+						<input type="text" name="name" id="name" placeholder="Name" required />
+					</div>
+					<div class="col-6 col-12-xsmall">
+						<input type="email" name="email" id="email" placeholder="Email" required />
+					</div>
+					<div class="col-12">
+						<textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
+					</div>
+					<div class="col-12">
+						<ul class="actions">
+							<li><input type="submit" value="Send Message" /></li>
+						</ul>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
 </section>
 
 							<div class="col-4 col-12-small">
@@ -487,6 +489,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
