--- a/index.html
+++ b/index.html
@@ -95,54 +95,65 @@
 						</ul>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you are interested in my projects or job oppurtunites please reach out to me.</p>
-	 <div class="row">
-		<div class="col-8 col-12-small">
-			<form method="post" action="https://cadebeno33.page.gd/send-email.php">
-				<div class="row gtr-uniform gtr-50">
-					<div class="col-6 col-12-xsmall">
-						<input type="text" name="name" id="name" placeholder="Name" required />
-					</div>
-					<div class="col-6 col-12-xsmall">
-						<input type="email" name="email" id="email" placeholder="Email" required />
-					</div>
-					<div class="col-12">
-						<textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
-					</div>
-					<div class="col-12">
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" /></li>
-						</ul>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
+				<section id="contact">
+  <h2>Get In Touch</h2>
+  <p>If you are interested in my projects or job opportunities, please reach out.</p>
+
+  <div class="row">
+    <div class="col-8 col-12-small">
+      <form id="contactForm" method="post" action="send-email.php">
+        <div class="row gtr-uniform gtr-50">
+
+          <div class="col-6 col-12-xsmall">
+            <input type="text" name="name" id="name" placeholder="Name" required />
+          </div>
+
+          <div class="col-6 col-12-xsmall">
+            <input type="email" name="email" id="email" placeholder="Email" required />
+          </div>
+
+          <div class="col-12">
+            <textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
+          </div>
+
+          <div class="col-12">
+            <ul class="actions">
+              <li><input type="submit" value="Send Message" class="primary" /></li>
+            </ul>
+          </div>
+
+        </div>
+      </form>
+    </div>
+
+    <div class="col-4 col-12-small">
+      <ul class="labeled-icons">
+        <li>
+          <h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+          2607 Clayborne Ct.<br />
+          Effingham, IL 62401<br />
+          United States
+        </li>
+        <li>
+          <h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
+          217-821-0946
+        </li>
+        <li>
+          <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+          <a href="mailto:cadebeno3322@gmail.com">cadebeno3322@gmail.com</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
 
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										2607 Clayborne Ct.<br />
-										Effingham, IL 62401<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										217-821-0946
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:cadebeno3322@gmail.com">cadebeno3322@gmail.com</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
+<script>
+// Trim whitespace from email before submitting
+document.getElementById('contactForm').addEventListener('submit', function(e) {
+    const emailInput = document.getElementById('email');
+    emailInput.value = emailInput.value.trim();
+});
+</script>
 
 				<!-- Four -->
 				<!--
@@ -488,6 +499,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
