--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<input type="text" name="name" id="name" placeholder="Name" required />
 					</div>
 					<div class="col-6 col-12-xsmall">
-						<input type="email" name="email" id="email" placeholder="Email" required />
+						<input type="text" name="email" id="email" placeholder="Email" required />
 					</div>
 					<div class="col-12">
 						<textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
@@ -488,4 +488,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
