--- a/index.html
+++ b/index.html
@@ -102,24 +102,37 @@
 						<section id="three">
     <div class="row">
 		<div class="col-8 col-12-small">
-			<form method="post" action="https://cadebeno33.page.gd/send-email.php">
-				<div class="row gtr-uniform gtr-50">
-					<div class="col-6 col-12-xsmall">
-						<input type="text" name="name" id="name" placeholder="Name" required />
-					</div>
-					<div class="col-6 col-12-xsmall">
-						<input type="text" name="email" id="email" placeholder="Email" required />
-					</div>
-					<div class="col-12">
-						<textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
-					</div>
-					<div class="col-12">
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" /></li>
-						</ul>
-					</div>
-				</div>
-			</form>
+			<form action="https://api.web3forms.com/submit" method="POST">
+
+  <!-- Replace with your Web3Forms Access Key -->
+  <input type="hidden" name="access_key" value="3b927f26-89dc-407a-9029-38ed04ea612c">
+
+  <!-- Form Inputs -->
+  <div class="row gtr-uniform gtr-50">
+    <div class="col-6 col-12-xsmall">
+      <input type="text" name="name" placeholder="Name" required />
+    </div>
+
+    <div class="col-6 col-12-xsmall">
+      <input type="email" name="email" placeholder="Email" required />
+    </div>
+
+    <div class="col-12">
+      <textarea name="message" placeholder="Message" rows="4" required></textarea>
+    </div>
+
+    <!-- Honeypot Spam Protection -->
+    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+
+    <div class="col-12">
+      <ul class="actions">
+        <li><button type="submit" class="primary">Send Message</button></li>
+      </ul>
+    </div>
+  </div>
+
+</form>
+
 		</div>
 	</div>
 </section>
@@ -488,5 +501,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
