--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/unnamed.jpg" alt="" /></a>
-					<h1><strong>Hi! I'm Cade Buehnerkemper</strong> a senior double major in engineering and mathematics 
+					<h1><strong>Hi! I'm Cade Buehnerkemper</strong>, a senior double major in engineering and mathematics 
 						with an emphasis on electrical engineering.
 						</h1>
 					<p>Let me take you on a walk through some of my accomplishments and progress thus far. </p>
@@ -32,7 +32,7 @@
 						<header class="major">
 							<h2>I aspire to become an electrical engineer, and with my unique toolset I am the fit for you!</h2>
 						</header>
-						<p>Throughout my college career I have embarked on a unique journey. I currently play college baseball while also pursuing a double major in engineering and mathematics. Let me open your eyes to my accomplishments. I have recieved numerous engineering and mathematics awards, along a 3.99 GPA to go along with it. I have self navigated many projects, like this portfolio for example. I have hands on experience as well as the background to tackle anything thrown my way. Throughout my exerience, I have created some unique projects that I would like to share with you. Please take the short time out of your day to help yourself see why I should be your next employee! </p>
+						<p>Throughout my college career I have embarked on a unique journey. I currently play college baseball while also pursuing a double major in engineering and mathematics. Let me open your eyes to my accomplishments. I have recieved numerous engineering and mathematics awards, along a 3.99 GPA to go along with it. I have self navigated many projects, like this portfolio for example. I have hands on experience, and the diverse background to tackle anything thrown my way. Throughout my exerience, I have created some unique projects that I would like to share with you. Please take the short time out of your day to help yourself see why I should be your next employee! </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -45,16 +45,16 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Hurricane_Plot.png" class="image fit thumb"><img src="images/Hurricane_Plot.png" alt="" /></a>
 								<h3>Spaghetti Plot of a Hurricane approximately 5 days from landfall</h3>
-								<p>Using Matlab, I was able to simulate the path a hurricane may take randomly due to the constant changing 
+								<p>Using Matlab, I was able to simulate the path a hurricane may take randomly, due to the constant changing 
 									factors in the atmosphere. At every time step, there is a random variable included which allows for the different 
 									trajectories. This model is based on the strength of the Bermuda High. Though many of my variables are constants,
 								it allows for rapid adaptibility. This model can be used to study hurricanes paths based on a variety of different initial conditions.
-							Really the limit is your imagination.</p>
+							Really, the limit is your imagination.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Screenshot 2025-08-06 185103.png" class="image fit thumb"><img src="images/Screenshot 2025-08-06 185103.png" alt="" /></a>
 								<h3>Matlab Code for Hurricane Forecasting Model</h3>
-								<p>In this code you should be able to see the function I have defined for this hurricanes path. It is based on the strength of the wind field from the Bermuda High, and changes due to a random term epsilon.
+								<p>In this code, you can see the function I have defined for this hurricanes path. It is based on the strength of the wind field from the Bermuda High, and changes due to a random term epsilon.
 									Not shown in this screenshoot is the histogram of probable landfall positions on the Florida cost. If you would like to here more about 
 									this project, I have a full report written in LaTeX I can share with you.
 								</p>
@@ -62,7 +62,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Ice-Thickness example.png" class="image fit thumb"><img src="images/Ice-Thickness example.png" alt="" /></a>
 								<h3> Ice thickness prediction on a Lake
-								<p>Within this phot it shows the growth of ice on Lake Mendota. This graph is taking in a variety of factors all ran in Matlab. 
+								<p>This plot shows the growth of ice on Lake Mendota. This graph is taking in a variety of factors all ran in Matlab. 
 									As you can see, the ice thickness is all based on when the lake is completely covered in a layer of ice. Within my LaTeX document, I talk aobut the applications that this model has. Essentially, once a lake freezes over completely, which happens in 7-10 days of below freezing temperatures, we can accurately predict the ice thickness of a lake. It does this by taking into account the meteorlogical data for the future, the snow fall, and working on small to medium sized lakes. Using this, you can accurately predict the ice thickness multiple days in advance.
 									 This model has numerous implications and if you are interested, please reach out and I can send you my write up. 
 								</h3></p>
@@ -86,7 +86,7 @@
 								<a href="images/Screenshot 2025-08-17 171856.png" class="image fit thumb"><img src="images/Screenshot 2025-08-17 171856.png" alt="" /></a>
 								<h3>V6 Engine Assembly in SolidWorks</h3>
 								<p>As part of a engineering design class, I made an assembly of a v6 engine in SolidWorks. It is missing some of the the components like the valve cover, and oil pan. This is done because the purpose of the project was to improve something on the design too.
-									In order to show this, we kept some of these aspects off. We in turn increase the lobes of the camshafts, in order to have a longer intake cycle, which in turn would hopefully increase our power output.
+									In order to show this, we kept some of these aspects off. We increase the lobes of the camshafts, in order to have a longer intake cycle, which in turn would hopefully increase our power output.
 								</p>
 							</article>
 						</div>
@@ -501,6 +501,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
