--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 							<h2>I aspire to become an electrical engineer, and with my unique toolset I am the fit for you!</h2>
 						</header>
 						<p>Throughout my college career I have embarked on a unique journey. I currently play college baseball while also pursuing a double major in engineering and mathematics. Let me open your eyes to my accomplishments. I have recieved numerous engineering and mathematics awards, along a 3.99 GPA to go along with it. I have self navigated many projects, like this portfolio for example. I have hands on experience, and the diverse background to tackle anything thrown my way. Throughout my exerience, I have created some unique projects that I would like to share with you. Please take the short time out of your day to help yourself see why I should be your next employee! </p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
 					</section>
 
 				<!-- Two -->
@@ -91,7 +88,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="#" class="button">Back to the Top</a></li>
 						</ul>
 					</section>
 
@@ -501,6 +498,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
